2009-07-06 15:28 +0200  Rocco Rutte  <pdmef@gmx.net>  (ccab6c56b557)

	* doc/manual.xml.head: Manual: Add a note about when/why to use utf-8

2009-07-05 18:36 -0700  Brendan Cully  <brendan@kublai.com>  (118b8fef8aae)

	* buffy.c, buffy.h, mx.c: Suppress new mail notification
	from mailbox just left. Closes #3290.

2009-07-02 20:42 +0200  Rocco Rutte  <pdmef@gmx.net>  (042f2ce0b870)

	* doc/manual.xml.head: Manual: minor fixes

	* doc/manual.xml.head, doc/mutt.css: Manual: Render
	comments in examples a lighter for readability

	* doc/manual.xml.head, doc/manual.xml.tail: Manual: Reformat
	paragraphs, fix &tilde; -> ~ breakage

	* doc/manual.xml.head: Manual: rework MIME chapter a bit

	* doc/gen-map-doc, doc/manual.xml.tail, functions.h: Manual: Generate
	more pretty titles/ids for key binding tables

	* doc/manual.xml.head: Manual: fix supported version
	numbers for mixmaster

2009-07-02 00:06 -0700  Brendan Cully  <brendan@kublai.com>  (029ba140fb48)

	* curs_main.c: Handle keepalive failure when changing folders. There
	are probably many other places where this kind of thing could happen
	though. See #3028.

2009-07-01 18:13 -0700  Rocco Rutte  <pdmef@gmx.net>  (f6c6066a5925)

	* account.c, mutt_sasl.c, smtp.c: Make getuser/pass abort
	if input is required in batch mode. Replaces [0a3de4d9a009]. See
	#3289.

	* doc/manual.xml.head: Manual: Add detailed section on charset
	handling

	* smtp.c: SMTP: use $smtp_pass in batch mode. Closes #3289.

	mutt_account_getpass() copying the password from $smtp_pass into the
	account structure is only called from the SASL callback we only use
	if we're sure we don't need curses (i.e. have the pass already).

2009-06-30 17:32 +0200  Rocco Rutte  <pdmef@gmx.net>  (f4baa2f1251a)

	* pgpewrap.c: Add missing config.h include to pgpewrap.c

	It technically doesn't need it, but pgpewrap should be rebuilt after
	configure ran, too.

	* doc/Makefile.am: Manual: Run lynx with --display_charset
	=us-ascii, see #3286.
